--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recomendador de Playlist</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Recomendador de Playlist</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Recomendador de Playlist</h1>
-    <div class="container">
-        <form id="playlistForm">
-            <label for="usuario">Introduce tu usuario de Spotify:</label>
-            <input type="text" id="usuario" name="usuario" required>
-            <button type="button" onclick="obtenerPlaylists()">Obtener Playlists</button>
-        </form>
-        <div id="playlists"></div>
-        <div id="questionnaire"></div>
-        <div id="resultado"></div>
-    </div>
+  <h1>Recomendador de Playlist</h1>
+  <div class="container">
+    <form id="playlistForm">
+      <label for="usuario">Introduce tu nombre de usuario de Spotify:</label>
+      <input type="text" id="usuario" name="usuario" required>
+      <button type="button" onclick="obtenerIdCliente()">Obtener Playlists</button>
+    </form>
+    <img id="fotoPerfil" src="" alt="Foto de perfil">
+    <div id="playlists"></div>
+    <div id="questionnaire"></div>
+    <div id="resultado"></div>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
